# deprecated_stein-blog

./: ._postgres  .gitignore  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.nuxt.prod.yml  docker-compose.prod.yml  docker-compose.react.prod.yml  docker-compose.stage.yml  docker-compose.yml
django/: .gitignore  Dockerfile  pyproject.toml
django/webcompose/blog/: models.py  serializers.py  urls.py  views.py
django/webcompose/blog/migrations/: 0001_initial.py  0002_auto_20211120_1205.py  0003_alter_category_parent.py  0004_file.py
django/webcompose/webcompose/: settings.py  urls.py
nginx/: nginx.conf
nginx-proxy/: custom.conf
nginx-proxy/vhost.d/: api.blog.steinjun.net  blog.steinjun.net  default
nuxt/: API.js  nuxt.config.js  package-lock.json  package.json
nuxt/assets/: global.scss
nuxt/assets/quill/: core.css  snow.css
nuxt/components/: transientCard.vue
nuxt/components/canvas/: CircleMenu.vue  circleCanvas.js  utils.js
nuxt/components/card/: PostCard.vue
nuxt/layouts/: default.vue
nuxt/pages/: index.vue  post.vue
nuxt/pages/index/: LeftPostCards.vue
nuxt/pages/manage/: category.vue  index.vue
nuxt/pages/post/: _id.vue  list.vue  new.vue
nuxt/pages/post/edit/: _id.vue
nuxt/plugins/: nuxt-quill-plugin.js  sweet-alerts.js  toast-ui.js  util.js
