[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["jun"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
django-cors-headers = "^3.11.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
